--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="pt.html"><img src="images/logoo.png"></a>
+      <a href="index.html"><img src="images/logoo.png"></a>
       <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
